--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="msvalidate.01" content="{{ site.bing_webmaster }}" />
   <meta name="yandex-verification" content="{{ site.yandex_webmaster }}" />
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   {%- feed_meta -%}
